dynamix/force-app/main/default/objects/BANK_GL__mdt/BANK_GL__mdt.object-meta.xml
<CustomObject>
    <label>BANK GL</label>
    <pluralLabel>BANK GL</pluralLabel>
</CustomObject>