dynamix/force-app/main/default/objects/BANK_GL__mdt/fields/GST_GL__c.field-meta.xml
<CustomField>
    <fullName>GST_GL__c</fullName>
    <label>GST GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>