dynamix/force-app/main/default/objects/BANK_GL__mdt/fields/Interest_GL__c.field-meta.xml
<CustomField>
    <fullName>Interest_GL__c</fullName>
    <label>Interest GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>