dynamix/force-app/main/default/objects/BANK_GL__mdt/fields/Other_Charges_GL__c.field-meta.xml
<CustomField>
    <fullName>Other_Charges_GL__c</fullName>
    <label>Other Charges GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>