dynamix/force-app/main/default/objects/BANK_GL__mdt/fields/Security_and_Share_GL__c.field-meta.xml
<CustomField>
    <fullName>Security_and_Share_GL__c</fullName>
    <label>Security and Share GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>