dynamix/force-app/main/default/objects/BANK_GL__mdt/fields/Unit_GL__c.field-meta.xml
<CustomField>
    <fullName>Unit_GL__c</fullName>
    <label>Unit GL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>